--- a/myproject/slotapp/static/time.html
+++ b/myproject/slotapp/static/time.html
@@ -8,13 +8,13 @@
      <center> 
      <img src="/static/logo.png" height="150" width="800">
      </center>
-      <h3 align="center">  SLOT TIME TABLE - STUDENT NAME ( ROLL NO. ) </h3>
+      <h3 align="center">  SLOT TIME TABLE - JITHESH ( 25011147 ) </h3>
         <table align="center" border="5" cellpadding="6" cellspacing="2" bgcolor="cyan">
         <tr>
           <th bgcolor="yellow">Day</th>    
           <th bgcolor="yellow">8-10</th>
           <th bgcolor="yellow">10-12</th>
-          <th bgcolor="yellow">12-1</th>
+          <th bgcolor="yellow">12-1</th>http://127.0.0.1:8000/
           <th bgcolor="yellow">1-3</th>
           <th bgcolor="yellow">3-5</th>
         </tr>
